# biliTickerBuy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  __init__.py  app_update.py  app_version.py  bilibili-buy.spec  common.py  config.json  config.py  const.py  cpp.py  docker-compose.yml  dump.py  install.bat  install.ps1  install.sh  main.py  main.spec  path.py  pyproject.toml  pyvenv.cfg  readme.md  requirements.txt  test.py
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: container-image.yml  drawer.yml  publish-pypi.yml  release.yml  ruff-check.yml  ruff-format.yml
SCF/tencent/: index.py
app_cmd/: __init__.py  buy.py  bws.py  cli_args.py  ticker.py  worker.py
app_cmd/config/: BuyConfig.py  BwsConfig.py  ConfigBasic.py  NotifierConfig.py
assets/: fail_messages.json  icon.icns  style.css
assets/updater/: .env.install  update.bat  update.sh
bilitickerbuy/: __init__.py
bilitickerbuy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: cookies.json
cptoken/: __init__.py
demo/: proxy_ip_request_api_demo.py
doc/: help.md  如何下载release.md
docs/: docker-deployment.md  installation.md  proxy-self-hosting.md
geetest/: AmorterValidator.py  CapSolverValidator.py  NormalValidator.py  RROCRValidator.py  SiameseValidator.py  TripleValidator.py  Validator.py  api.py  click.js  main.py  rt.js  slide3.py
geetest/www/: api.py  click3.py  main.py  slide3.py
interface/: __init__.py  auth.py  bws.py  common.py  config.py  execution.py  managed_runner.py  project.py  search.py  types.py
log/: log.txt
menu/: GoodInput.py  OrderConfig.py  SelectProfileTable.py  SelectTicketsTable.py  TicketGrabbing.py  TicketOptions.py
scripts/: check_version_tag.py
service/: WorkerService.py
tab/: __init__.py  bws.py  config.py  go.py  log.py  login.py  problems.py  python.code-profile  rust.code-profile  settings.py  train.py  update.py
tab/componet/gradio_calendar/: calendar.py  calendar.pyi
tab/componet/gradio_calendar/templates/component/: index.js  style.css
tab/componet/gradio_calendar/templates/example/: index.js  style.css
task/: __init__.py  buy.py  buy_helpers.py  buy_types.py  bws.py  endpoint.py
tests/: conftest.py  debug_create_v2_flow.py  generate_local_ptoken.py  h2client_loader.py  test_app_update.py  test_bili_request_h2_client.py  test_bili_request_h2_recovery.py  test_bili_request_maintenance.py  test_bili_request_rate_limit.py  test_buy_prepare_token.py  test_buy_refresh_count.py  test_buy_reprepare_reason.py  test_buy_time_sync.py  test_buy_token_payload.py  test_bws_reservation.py  test_ctoken.py  test_ctoken_util.py  test_go_ticket_preview.py  test_h2connection.py  test_ja_h2_client.py  test_login_account_defaults.py  test_notifier_join_all.py  test_payment_result_fields.py  test_proxy_api_provider.py  test_settings_ticket_selection.py  test_task_log_controls.py  test_task_log_status.py  test_time_util.py
util/: AudioUtil.py  BarkUtil.py  BiliRequest.py  BrowerState.py  CTokenUtil.py  Constant.py  CookieManager.py  ErrorCodes.py  JsonUtil.py  KVDatabase.py  LogConfig.py  MeoWUtil.py  Notifier.py  NtfyUtil.py  PTokenUtil.py  PlusPlusUtil.py  PlusUtil.py  ProxyBackoff.py  ProxyManager.py  ProxyState.py  ProxyTester.py  PushPlusUtil.py  RandomMessages.py  RandomUA.py  SCFRequest.py  ServerChanUtil.py  TimeAdapter.py  TimeService.py  TimeUtil.py  TokenService.py  TokenUtil.py  WebhookUtil.py  __init__.py  bili_request.py  config.py  configUtil.py  config_util.py  dynimport.py  error.py  error_codes.py  (+6 more)
util/Storage/: CleanupUtil.py  KVDatabase.py
util/h2client/: abstract_h2_client.py  client_ja.py  constants.py  h2connection.py  ja_h2_client.py
util/log/: LogWeb.py
util/notifer/: AudioUtil.py  BarkUtil.py  MeoWUtil.py  Notifier.py  NtfyUtil.py  ServerChanUtil.py
util/proxy/: ProxyApiProvider.py  ProxyManager.py  ProxyTester.py  PushPlusUtil.py
util/request/: BiliRequest.py  CookieManager.py
util/request/exceptions/: __init__.py  connection.py  rate_limit.py
