[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilitickerbuy"
version = "2.15.7"
description = "开源的 B 站会员购辅助工具，提供命令行和 Gradio 界面"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "biliTickerBuy Maintainers" }]
keywords = ["bilibili", "tickets", "cli", "gradio", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Environment :: Web Environment",
]
dependencies = [
    "gradio~=4.44.1",
    "gradio-calendar~=0.0.6",
    "httpx[brotli,http2,socks,zstd]>=0.28.1",
    "loguru~=0.7.2",
    "ntplib~=0.4.0",
    "packaging>=23.2",
    "numpy~=1.26.4",
    "playsound3~=3.2.2",
    "pydantic~=2.8.2",
    "qrcode>=7.4.2",
    "requests[socks]~=2.31.0",
    "retry~=0.9.2",
    "setuptools~=65.5.1",
    "tinydb~=4.8.0",
    "Pillow~=10.3.0",
    "huggingface-hub==0.34.3",
    "fastapi==0.112.2",
    "starlette==0.38.6",
    "jinja2==3.1.2",
    "pytest>=9.0.3",
    "textual>=8.2.7",
    "rich>=15.0.0",
    "tyro>=0.9.28",
]

[project.urls]
Homepage = "https://github.com/mikumifa/biliTickerBuy"
Source = "https://github.com/mikumifa/biliTickerBuy"
Issues = "https://github.com/mikumifa/biliTickerBuy/issues"

[project.scripts]
btb = "main:main"

[tool.setuptools]
py-modules = ["main", "app_version", "app_update"]

[tool.setuptools.data-files]
assets = [
    "assets/style.css",
    "assets/icon.ico",
    "assets/icon.icns",
    "assets/fail_messages.json",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
